--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "prod_deploy": "ng build --prod --aot firebase deploy",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
